# rustygrad

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: avg_pool_2d.rs  avg_pool_2d_cuda.rs  conv2d.rs  conv2d_cuda.rs  expand.rs  expand_cuda.rs
examples/: efficientnet.rs  loop.rs  tokenizer.rs  train_efficientnet.rs
resources/: add.cu  backend.cu
scripts/: batchnorm2d.py
src/: batch_norm.rs  cpu.rs  device.rs  efficientnet.rs  graph.rs  lib.rs  loops.rs  op.rs  pth_to_json.py  tensor.rs  util.rs
src/backend/: cpu.rs  cuda.rs
src/models/: efficientnet.rs  mod.rs
src/nn/: batch_norm.rs
tests/: batch_norm.rs  cpu_backend.rs  cuda_backend.rs  efficientnet.rs  util.rs
