[package]
name = "rustygrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dirs = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
tempfile = "3.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
