[package]
name = "rustygrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
assert_approx_eq = "1.1.0"
dirs = "5.0.1"
image = "0.24.7"
itertools = "0.12.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tempfile = "3.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tch = { version = "0.14.0", features = ["download-libtorch"] }
lazy_static = "1.4.0"
