[package]
name = "rustygrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
image = "0.24.7"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lazy_static = "1.4.0"
petgraph = "0.6.4"
stacker = "0.1.15"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
tch = { version = "0.14.0", features = ["download-libtorch"] }

[build-dependencies]
cc = "1.0.83"

[[bench]]
name = "expand"
harness = false

[[bench]]
name = "expand_cuda"
harness = false

[[bench]]
name = "conv2d"
harness = false

[[bench]]
name = "avg_pool_2d"
harness = false
